--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,10 @@
-<h2>Sign up</h2>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<%= render "shared/second.header" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -26,4 +28,6 @@
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%#<%= render "users/shared/links" %>
+<%= render "shared/footer" %>
+</div>
