--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,10 +4,26 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
+ <div class="field">
+    <%= f.label :nickname %><br />
+    <%= f.text_area :nickname, class:"aaa", id:"nickname", placeholder:"例) 太郎", maxlength:"20"  %>
+ </div> 
+
+ <div class="input-name-wrap">
+ <%= f.label :name %><br />
+    <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
+    <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+ </div> 
+ <div class='input-name-wrap'>   
+ <%= f.label :kana %><br /> 
+      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+ </div>
+ 
   
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, class:"aaa", autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -15,16 +31,30 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password,class:"aaa", autocomplete: "new-password" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, class:"aaa", autocomplete: "new-password" %>
   </div>
+<%= f.label :birthday %><br>
+  <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="register-btn">
+    <%= f.submit "Sign up",class:"register-red-btn"  %>
   </div>
 <% end %>
 
