--- a/app/views/shared/_second.header.html.erb
+++ b/app/views/shared/_second.header.html.erb
@@ -1,6 +1,8 @@
   <header class="mb-auto">
     <div>
+      <%= link_to root_path do%>
       <h3 class="float-md-start mb-0">trico</h3>
+      <% end %>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <div class="nav-link active" aria-current="page">sign up</div>
         
