--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -65,3 +65,15 @@
   font-size: 14px;
   cursor: pointer;
 }
+
+.mb-0 {
+  color: #fff;
+}
+
+.facebook{
+  color: #1877f2!important;
+}
+
+.google{
+  color:#DD5144!important;
+}
