--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,7 +1,24 @@
-<h2>Sign up</h2>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<%= render "shared/second.header" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "owners/shared/error_messages", resource: resource %>
+
+ <div class="field">
+    <%= f.label :nickname %><br />
+    <%= f.text_area :nickname, class:"aaa", id:"nickname", placeholder:"例) 太郎", maxlength:"20"  %>
+ </div> 
+
+ <div class="input-name-wrap">
+ <%= f.label :name %><br />
+    <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
+    <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+ </div> 
+ <div class='input-name-wrap'>   
+ <%= f.label :kana %><br /> 
+      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+ </div>
 
   <div class="field">
     <%= f.label :email %><br />
