--- a/app/views/shared/_second.header.html.erb
+++ b/app/views/shared/_second.header.html.erb
@@ -5,7 +5,9 @@
       <% end %>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <div class="nav-link active" aria-current="page">sign up</div>
-        
+        <%= link_to 'Facebook', "#", class: "nav-link active facebook" %>
+        <%= link_to 'Google', "#", class: "nav-link active google" %>
+
       </nav>
     </div>
   </header>
