--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -4,20 +4,15 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "owners/shared/error_messages", resource: resource %>
 
- <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_area :nickname, class:"aaa", id:"nickname", placeholder:"例) 太郎", maxlength:"20"  %>
- </div> 
-
  <div class="input-name-wrap">
  <%= f.label :name %><br />
-    <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-    <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+    <%= f.text_area :owner_last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
+    <%= f.text_area :owner_first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
  </div> 
  <div class='input-name-wrap'>   
  <%= f.label :kana %><br /> 
-      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <%= f.text_area :owner_last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_area :owner_first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
  </div>
 
   <div class="field">
@@ -37,7 +32,9 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+  <%= f.collection_select(:how_to_pay_id, HowToPay.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
+  <%= f.collection_select(:rest_day_id, RestDay.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
+  <%= f.collection_select(:salon_concept_id, SalonConcept.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
