--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -62,6 +62,11 @@
   <%= f.label :salon_concept %><br />
   <%= f.collection_select(:salon_concept_id, SalonConcept.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
   </div>
+  <div class="field">
+    <%= f.label :sns_account %><br />
+    <%= f.text_area :sns_account, class:"aaa", id:"phone_number", placeholder:"例) 太郎", maxlength:"20"  %>
+  </div> 
+
 <br />
   <div class="register-btn">
     <%= f.submit "Sign up",class:"register-red-btn"  %>
