--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,10 @@
         <%= link_to current_user.nickname, "#", class: "nav-link active" %>
         <%= link_to 'log out', destroy_user_session_path, method: :delete, class: "nav-link active"%>
         <% end %>
+        <% if owner_signed_in?%>
+        <%= link_to current_owner.salon_name, "#", class: "nav-link active" %>
+        <%= link_to 'log out', destroy_owner_session_path, method: :delete, class: "nav-link active"%>
+        <% end %>
       </nav>
     </div>
   </header>
