SNS認証全体設定

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,10 @@
         <% if user_signed_in?%>
         <%= link_to current_user.nickname, "#", class: "nav-link active" %>
         <%= link_to 'log out', destroy_user_session_path, method: :delete, class: "nav-link active"%>
+        <% else %>
+        <%= link_to 'log in', new_user_session_path, class: "nav-link active" %>
         <% end %>
+
         <% if owner_signed_in?%>
         <%= link_to current_owner.salon_name, "#", class: "nav-link active" %>
         <%= link_to 'log out', destroy_owner_session_path, method: :delete, class: "nav-link active"%>
