--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -26,6 +26,9 @@
     <%= f.email_field :email, class:"aaa", autofocus: true, autocomplete: "email" %>
   </div>
 
+  <%if @sns_id.present? %>
+    <%= hidden_field_tag :sns_auth, true%>
+  <% else %>
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -38,6 +41,7 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, class:"aaa", autocomplete: "new-password" %>
   </div>
+  <% end %>
 <%= f.label :birthday %><br>
   <div class='input-birth-wrap'>
       <%= raw sprintf(
