--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,12 @@
   <header class="mb-auto">
     <div>
+      <%= link_to root_path do%>
       <h3 class="float-md-start mb-0">trico</h3>
+      <% end %>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">About us</a>
         <a class="nav-link active" href="#">contact</a>
+
 
         <% if user_signed_in?%>
          <%= link_to current_user.nickname, "#", class: "nav-link active" %>
