--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -9,7 +9,8 @@ a {
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
-  background-image: image-url('furima-header01.png');
+  height: 500px;
+  background-image: image-url('rich.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -23,12 +24,13 @@ a {
 }
 
 .service-title {
-  font-size: 8vh;
+  font-size: 5vh;
+  font-family: serif;
 }
 
 .service-explain {
   font-size: 2.5vh;
-  line-height: 40px;
+  font-family: serif;
 }
 
 .store-btn {
