--- a/app/views/users/_user_header.html.erb
+++ b/app/views/users/_user_header.html.erb
@@ -14,7 +14,7 @@
       <li><%= link_to '美容室', "#", class: "category-list" %></li>
       <li><%= link_to 'ネイル', "#", class: "brand-list" %></li>
       <li><%= link_to 'マツエク', "#", class: "brand-list" %></li>
-      <li><%= link_to 'エステ・リラク', "#", class: "brand-list" %></li>
+      <li><%= link_to 'エステ', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in?%>
