トップページ色変更

--- a/app/assets/stylesheets/cover.css
+++ b/app/assets/stylesheets/cover.css
@@ -35,6 +35,10 @@ body {
  * Header
  */
 
+ .main-word{
+   color: white!important;
+ }
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
