選択時cssにアニメーション

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,7 +28,7 @@
     <div>
     <ul class='reason-lists'>
       <li class='list'>
-        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair"), "#" %>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair",id:"hair"), "#" %>
         <span class='reason-list-number'>美容室</span>
         
       </li>
