--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -91,6 +91,14 @@ a {
   flex-direction: column;
   align-items: center;
   position: relative;
+  -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+}
+
+.list:hover{
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .list-pict {
