美容室ページビュー整える

--- a/app/assets/stylesheets/user/index.scss
+++ b/app/assets/stylesheets/user/index.scss
@@ -335,7 +335,7 @@ a {
   position: relative;
   width: 100%;
   margin-bottom: 0;
-  background-image: url('luxe.png');
+  background-image: url('../luxe.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -399,3 +399,6 @@ a {
   max-width: 984px;
   background: #fff;
 }
+
+/*かく検索ページ*/
+
