--- a/app/views/salons/hair_index.html.erb
+++ b/app/views/salons/hair_index.html.erb
@@ -1,4 +1,199 @@
 <div>
-<%= render "user_header" %>
+<%= render "shared/menu.header" %>
 <div class='main'>
+
+  <%# 画面上部の「非日常をあなたに」帯部分 %>
+  <div class='title-contents'>
+    <h2 class='service-title'>
+      非日常をあなたに
+    </h2>
+    <p class='service-explain'>
+      tricoは誰でも上質な体験をさせてくれる
+    </p>
+    <p class='service-explain'>
+      プライベートサロンだけを集めたアプリです
+    </p>
+   <%# <div class='store-btn'>
+      <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
+    <%#  <%= link_to image_tag("dl-android.png", class:"google-btn"), "#" %>
+    <%#</div>%>
+  </div>
+  <%# /画面上部の「非日常をあなたに」帯部分  %>
+
+  <%# 予約選択 %>
+  <div class='select-reason-contents1'>
+    <h2 class='title'>
+      特集から美容室を探す
+    </h2>
+    <div>
+    <ul class='reason-lists'>
+      <li class='hair-list'>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair",id:"hair"), "#" %>
+        <span class='reason-list-number1'>美容室</span>
+      </li>
+      <li class='hair-list'>
+        <%= link_to image_tag( "eyelash.jpg", class:"list-pict link-item eyelash"),"#" %>
+        <span class='reason-list-number1'>マツエク</span>
+        
+      </li>
+      <li class='hair-list'>
+        <%= link_to image_tag( "nail.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number1'>ネイル</span>
+      </li>
+      <li class='hair-list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number1'>エステ</span>
+        
+      </li>
+      <li class='hair-list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number1'>エステ</span>
+      </li>
+
+    </ul>
+    </div>
+  </div>
+  <%# 予約選択 %>
+
+  <%# おすすめ美容室 %>
+<div class='select-reason-contents1'>
+    <h2 class='title'>
+      カットが評判の美容室
+    </h2>
+    <div>
+    <ul class='reason-lists'>
+      <li class='list'>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair"), "#" %>
+        <span class='reason-list-number'>美容室</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "eyelash.jpg", class:"list-pict link-item eyelash"),"#" %>
+        <span class='reason-list-number'>マツエク</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "nail.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>ネイル</span>
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>エステ</span>
+        
+      </li>
+    </ul>
+    </div>
+  </div>
+  <%# おすすめ美容室 %>
+
+  <%# おすすめカラー %>
+<div class='select-reason-contents1'>
+    <h2 class='title'>
+      カラーが人気の美容室
+    </h2>
+    <div>
+    <ul class='reason-lists'>
+      <li class='list'>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair"), "#" %>
+        <span class='reason-list-number'>美容室</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "eyelash.jpg", class:"list-pict link-item eyelash"),"#" %>
+        <span class='reason-list-number'>マツエク</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "nail.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>ネイル</span>
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>エステ</span>
+        
+      </li>
+    </ul>
+    </div>
+  </div>
+  <%# おすすめカラー %>
+
+    <%# おすすめ新着デザイン、インスタ %>
+<div class='select-reason-contents1'>
+    <h2 class='title'>
+      新着デザイン
+    </h2>
+    <div>
+    <ul class='reason-lists'>
+      <li class='list'>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair"), "#" %>
+        <span class='reason-list-number'>美容室</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "eyelash.jpg", class:"list-pict link-item eyelash"),"#" %>
+        <span class='reason-list-number'>マツエク</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "nail.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>ネイル</span>
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>エステ</span>
+        
+      </li>
+    </ul>
+    </div>
+  </div>
+  <%# おすすめ新着デザイン、インスタ %>
+
+    <%# ヘアーカタログ %>
+<div class='select-reason-contents1'>
+    <h2 class='title'>
+      ヘアカタログ
+    </h2>
+    <div>
+    <ul class='reason-lists'>
+      <li class='list'>
+        <%= link_to image_tag("hair2.jpg", class:"list-pict link-item hair"), "#" %>
+        <span class='reason-list-number'>美容室</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "eyelash.jpg", class:"list-pict link-item eyelash"),"#" %>
+        <span class='reason-list-number'>マツエク</span>
+        
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "nail.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>ネイル</span>
+      </li>
+      <li class='list'>
+        <%= link_to image_tag( "est.jpg", class:"list-pict linl-item nail"),"#" %>
+        <span class='reason-list-number'>エステ</span>
+        
+      </li>
+    </ul>
+    </div>
+  </div>
+  <%# ヘアカタログ %>
+  <section class="trico-last-content">
+   <div class="container-inner">
+    <h2 class="container-heading-center">掲載をご希望のサロンオーナー様へ</h2>
+    <div class="container-content">
+      <p class="description">「trico（トリコ）」は美容師・ネイリスト・アイデザイナーなど、プライベートサロン限定の集客アプリです。</p>
+      <a href="＃" class="more-button">詳しく見る</a>
+    </div>
+   </div>
+  </section>
+  <%# /Footer前 %>
+
+ <div>  
+  <%= render "shared/user_footer" %>
+ </div>
+  </div>
+ </div>
+
+</div>
 
