--- a/app/views/shared/_menu.header.html.erb
+++ b/app/views/shared/_menu.header.html.erb
@@ -1,6 +1,6 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to 'trico', 'users_path',class:"furima-icon" %>
+    <%= link_to 'trico', users_path,class:"furima-icon" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='サロン名・メニュー名など'>
       <button class="search-button">
