第２階層タブ切替メニューJs完了

--- a/app/assets/stylesheets/owner/index.css
+++ b/app/assets/stylesheets/owner/index.css
@@ -108,6 +108,11 @@
     
 }
 
+/*teratailの人アドバイス
+/*.is-active+.tab-menu-detail {
+  display: flex;
+}
+
 /* タブコンテンツ */
 .tab-content {
   border: 1px solid #ccc;
