--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -37,31 +37,31 @@
 
 <div id="js-tab">
 <ul class="tab-menu" >
-  <li class="tab-menu__item"><span class="tab-trigger js-tab-trigger is-active" data-id="tab01">予約管理</span>
+  <li class="tab-menu__item"><span class="tab-trigger is-active" data-id="tab01">予約管理</span>
     <ul class="tab-menu-detail" id="tab01">
-        <li class="second-menu js-tab-target " data-menu="1">スケジュール確認</li>
-        <li class="second-menu js-tab-target " data-menu="2">定休日選択</li>
+        <li class="second-menu " data-menu="1" unko-id="10">スケジュール確認</li>
+        <li class="second-menu " data-menu="2"unko-id="10">定休日選択</li>
     </ul>
   </li>
 
-  <li class="tab-menu__item"><span class="tab-trigger js-tab-trigger" data-id="tab02">メニュー作成</span>
+  <li class="tab-menu__item"><span class="tab-trigger " data-id="tab02">メニュー作成</span>
     <ul class="tab-menu-detail" id="tab02">
-        <li class="second-menu js-tab-target is-active" data-menu="3">新規メニュー作成</li>
-        <li class="second-menu js-tab-target " data-menu="4">既存メニュー編集・削除</li>
+        <li class="second-menu is-active" data-menu="3">新規メニュー作成</li>
+        <li class="second-menu " data-menu="4">既存メニュー編集・削除</li>
     </ul>
   </li>
 
-  <li class="tab-menu__item"><span class="tab-trigger js-tab-trigger" data-id="tab03">クーポン作成</span>
+  <li class="tab-menu__item"><span class="tab-trigger " data-id="tab03">クーポン作成</span>
     <ul class="tab-menu-detail" id="tab03">
-        <li class="second-menu js-tab-target " data-menu="5">新規クーポン作成</li>
-        <li class="second-menu js-tab-target " data-menu="6">既存クーポン編集・削除</li>
+        <li class="second-menu  " data-menu="5">新規クーポン作成</li>
+        <li class="second-menu  " data-menu="6">既存クーポン編集・削除</li>
     </ul>
   </li>
 
-  <li class="tab-menu__item"><span class="tab-trigger js-tab-trigger" data-id="tab04">レビュー確認</span>
+  <li class="tab-menu__item"><span class="tab-trigger " data-id="tab04">レビュー確認</span>
     <ul class="tab-menu-detail" id="tab04">
-        <li class="second-menu js-tab-target " data-menu="7">新規メニュー作成</li>
-        <li class="second-menu js-tab-target " data-menu="8">既存メニュー編集・削除</li>
+        <li class="second-menu  " data-menu="7">現在のレビュー</li>
+        <li class="second-menu  " data-menu="8">コメント返信</li>
     </ul>
   </li>
 </ul>
@@ -70,24 +70,24 @@
 <!-- .2段目めにゅ -->
 
 
-<!-- .2段目めにゅ -->
+<!-- .メニュー内容 -->
 <div class="tab-content">
-  <div class="tab-content__item js-tab-target is-active" id="tab01">
-    <p>タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。</p>
+  <div class="tab-content__item  " unko-menu="1" >
+    <p class="tab-content__item" >タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。タブ1のコンテンツが入ります。</p>
   </div><!-- .tab-content__item -->
-  <div class="tab-content__item js-tab-target" id="tab02">
+  <div class="tab-content__item " unko-menu="2">
     <p>タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。タブ2のコンテンツが入ります。</p>
   </div><!-- .tab-content__item -->
-  <div class="tab-content__item js-tab-target" id="tab03">
+  <div class="tab-content__item " id="tab03">
     <p>タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。</p>
   </div><!-- .tab-content__item -->
-  <div class="tab-content__item js-tab-target" id="tab04">
+  <div class="tab-content__item " id="tab04">
     <p>タブ4のコンテンツが入ります。タブ4のコンテンツが入ります。タブ4のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。タブ3のコンテンツが入ります。</p>
   </div><!-- .tab-content__item -->
 </div><!-- .tab-content -->
 <%# /Footer前 %>
 </div>
-
+<%= render partial: "callender"%>
  <div>  
   <%= render "owner_footer" %>
  </div>
